--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
     <p1>För att formatera text med HTML så kan jag använda olika rubrik-element, heading på engelska. För text stycken så används paragrafer.</p1>
     <p1>Här nedan följer ett antal exempel på HTML text-element.</p1>
     <p1>Du kan läsa mer om <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML text-element hos Mozilla</a></a></p1>
+    <ul>
+        <li>&lt;h1&gt; - heading1 elementet, största rubriken</li>
+        <li>h2 - heading 2 elemement, andra rubriknivån</li>
+        <li>&lt;p&gt; -  paragraph, ett textblock med radbrytning efteråt</li>
+        <li>&lt;ul&gt; - ul står för unordered list</li>
+        <li>&lt;a&gt; - a används för att länka</li>
+
+        <a href="tale.html">Här kan du läsa en historia</a>
+    </ul>
 </main>
 
 <footer>
-    <p1>För att se mina exempel i webbläsaren så använder jag live-server</p1>
+    <p1>För att se mina exempel i webbläsaren så använder jag live-server.</p1>
 </footer>
 </body>
 </html>
