--- a/gutenberg.html
+++ b/gutenberg.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frankenstein</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <a href="#letter1">Letter 1</a>
 <a href="#letter2">Letter 2</a>
+<a href="aboutpage.html">om</a>
+
 <main>
 <div class="title">
 <h1>Frankenstein</h1>
