--- a/gutenberg.html
+++ b/gutenberg.html
@@ -11,6 +11,14 @@
 <a href="#letter2">Letter 2</a>
 <a href="aboutpage.html">om</a>
 
+    <button onclick="myFunction()">Toggle dark mode</button>
+    <script>
+    function myFunction() {
+       var element = document.body;
+       element.classList.toggle("dark-mode");
+    }
+    </script>
+
 <main>
 <div class="title">
 <h1>Frankenstein</h1>
